syntax = "proto3";
package im.v1;
option go_package = "github.com/EthanQC/IM/api/gen/im/v1;imv1";

import "google/protobuf/empty.proto";
import "im/v1/common.proto";

service MessageService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc GetHistory(GetHistoryRequest) returns (GetHistoryResponse);
  rpc UpdateRead(UpdateReadRequest) returns (google.protobuf.Empty);
}

message SendMessageRequest {
  int64 conversation_id = 1;
  string client_msg_id = 2;
  MessageContentType content_type = 3;
  MessageBody body = 4;
}
message SendMessageResponse { MessageItem message = 1; }
message GetHistoryRequest { int64 conversation_id = 1; int64 after_seq = 2; int32 limit = 3; }
message GetHistoryResponse { repeated MessageItem items = 1; }
message UpdateReadRequest { int64 conversation_id = 1; int64 read_seq = 2; }
